--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="togle">
         <div class="toggle"></div>
-        <p class="profile">Profile</p>
+        <p class="theme">Theme</p>
       </div>
     </header>
     <main>
@@ -32,10 +32,6 @@
     </main>
     <footer>
       <p>© 2024 Book App. All rights reserved.</p>
-      <p>
-        Designed by
-        <a href="https://www.linkedin.com/in/sunny-kumar-coder/">Sunny Kumar</a>
-      </p>
     </footer>
     <script src="script.js"></script>
   </body>
